[gd_scene load_steps=14 format=3 uid="uid://b3xvrj2ssrr0d"]

[ext_resource type="Script" uid="uid://m4wkfkd4gpav" path="res://scripts/UI/stage_completed.gd" id="1_7ddx5"]
[ext_resource type="FontFile" uid="uid://bnutn7cc24q22" path="res://assets/Fonts/Jersey25-Regular.ttf" id="1_x8qo5"]
[ext_resource type="Texture2D" uid="uid://cfy8bek2oprej" path="res://assets/sprites/GUI/Unactive_Star.png" id="3_7ddx5"]
[ext_resource type="Texture2D" uid="uid://b4p1suyh7ju7g" path="res://assets/sprites/GUI/HomeButton2.png" id="4_o3aja"]
[ext_resource type="Texture2D" uid="uid://d246se4g4bflu" path="res://assets/sprites/GUI/Hover_HomeButton2.png" id="5_wv73s"]
[ext_resource type="Texture2D" uid="uid://dq08ssa4wgs4q" path="res://assets/sprites/GUI/NextButton2.png" id="6_wanhn"]
[ext_resource type="Texture2D" uid="uid://wqyhniuupvw" path="res://assets/sprites/GUI/Hover_NextButton2.png" id="7_eyp4k"]
[ext_resource type="Texture2D" uid="uid://dbc8n1jae1axv" path="res://assets/sprites/GUI/RestartButton2.png" id="8_lxnrm"]
[ext_resource type="Texture2D" uid="uid://d2w84goldeonp" path="res://assets/sprites/GUI/Hover_RestartButton.png" id="9_q4olj"]

[sub_resource type="Animation" id="Animation_wfq5m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7ddx5"]
resource_name = "on"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.588235)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vjcht"]
_data = {
&"RESET": SubResource("Animation_wfq5m"),
&"on": SubResource("Animation_7ddx5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pc7l8"]
bg_color = Color(0.2, 0.101961, 0.239216, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.952941, 0.901961, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="StageCompleted" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ddx5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vjcht")
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 1)
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(650, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pc7l8")

[node name="Label" type="Label" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 39.0
offset_right = 172.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("1_x8qo5")
theme_override_font_sizes/font_size = 100
text = "Complete"
horizontal_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.5
offset_top = -95.0
offset_right = 162.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="CenterContainer/Panel/StarContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("3_7ddx5")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Star2" type="TextureRect" parent="CenterContainer/Panel/StarContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture = ExtResource("3_7ddx5")
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Star3" type="TextureRect" parent="CenterContainer/Panel/StarContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("3_7ddx5")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Stopwatch" type="Label" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.275
offset_top = 38.0
offset_right = 124.275
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("1_x8qo5")
theme_override_font_sizes/font_size = 50
text = "Time : 00:00:000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.718
anchor_right = 0.5
anchor_bottom = 0.962
offset_left = -272.0
offset_top = -3.05176e-05
offset_right = 278.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="Home" type="TextureButton" parent="CenterContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_o3aja")
texture_pressed = ExtResource("5_wv73s")
texture_hover = ExtResource("5_wv73s")
ignore_texture_size = true
stretch_mode = 5

[node name="Next" type="TextureButton" parent="CenterContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_wanhn")
texture_pressed = ExtResource("7_eyp4k")
texture_hover = ExtResource("7_eyp4k")
ignore_texture_size = true
stretch_mode = 5

[node name="Restart" type="TextureButton" parent="CenterContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("8_lxnrm")
texture_pressed = ExtResource("9_q4olj")
texture_hover = ExtResource("9_q4olj")
ignore_texture_size = true
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="CenterContainer/Panel/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
